# saf_final_project

./: .gitignore  README.md  evaluation.py  model_utils.py  plan.md  pyproject.toml  requirements.txt  spy_vol_iohmm_results.csv  spy_vol_iohmm_summary.csv
01_Data_Preprocessing_EDA/: data_adapter.ipynb  spy_in_sample_return_eda.ipynb
ARMA/: spy_return_benchmark_model.ipynb
HMM/: README.md  __init__.py  adapter.py  base.py  features.py  main_code.ipynb  model_utils.py  result.ipynb  return_prediction.ipynb  rv_prediction.ipynb  test_base.ipynb  test_basic.ipynb
HMM_daily_return/: model.ipynb  return_regime_utils.py
HMM_updated/: model.ipynb  return_regime_utils.py
HMM_weekly_vol/: model_utils.py  results.ipynb
IOHMM_add/: Visualization.ipynb  iohmm_full_pipeline.ipynb  vol_regime_visual.ipynb
Markov_Switching_AR/: README.md  __init__.py  adapter.py  model_utils.py  result.ipynb  test_basic.ipynb  test_model.ipynb
data_preprocessing/: data_adapter.py  price_utils.py
experiments/: _shared.py  har_canonical_h5_predictions.csv  har_canonical_h5_run.py  har_canonical_predictions.csv  hmm_canonical_h5_predictions.csv  hmm_canonical_h5_run.py  hmm_canonical_predictions.csv  hmm_canonical_run.py  iohmm_canonical_h5_predictions.csv  iohmm_canonical_h5_run.py  iohmm_canonical_predictions.csv  msar_alt_canonical_predictions.csv  msar_alt_canonical_run.py  msar_canonical_h5_predictions.csv  msar_canonical_h5_run.py  msar_canonical_predictions.csv  msar_canonical_run.py  regime_diagnostics.py  regime_metrics.py  regime_overlay_figure.py  unified_table.py  (+1 more)
(+47 files in other folders)
